# server/docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /Student_Management_System
 definitions:
+  common.LoginRequest:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
   course_handler.tableResponse:
     properties:
       course_list:
@@ -157,16 +164,12 @@ paths:
       - application/json
       description: 用户登录
       parameters:
-      - description: 用户名
-        in: query
-        name: username
+      - description: 用户信息
+        in: body
+        name: user_input
         required: true
-        type: string
-      - description: 密码
-        in: query
-        name: password
-        required: true
-        type: string
+        schema:
+          $ref: '#/definitions/common.LoginRequest'
       produces:
       - application/json
       responses:
